Death Whisper fixes + slovak language localization

--- a/trunk/datapack_development/data/lang/gsregister/GSRegister_cs.properties
+++ b/trunk/datapack_development/data/lang/gsregister/GSRegister_cs.properties
@@ -40,7 +40,7 @@ registerOpt1 = Zaregistrovat Herní Server na císlu <ID> a uloží hexid.txt soubor
 registerOpt2 = Mužete poskytnout záporné hodnoty pro <ID> do rejstríku podle prvních dostupných císel.
 registerOpt3 = Nic se nestane pokud <id> je již použité, v prípade že --force nebo --fallback je použité.
 unregisterOpt = Odstraní Herní Server podle stanoveného <ID>, použijte "vše" pro odebrání všech soucasných registrovaných Herních Serveru.
-wrongUnregisterArg = Špatný argument pro odstranení Herního Serveru, zadejte císelné ID nebo "vše" bez uvozovek, aby se odstranily všechny.
+wrongUnregisterArg = Špatný argument pro odstranení Herního Serveru, zadejte císelné ID nebo "all" bez uvozovek, aby se odstranily všechny.
 noAction = Žádné akce, která mají být prijata.
 checkingIdInUse = Kontroluji jestli císlo Herního Serveru %d je již použité...
 removingGsId = Odebírám císlo Herního Serveru: %d.
